Fixing some CSS issues on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,7 +96,7 @@ body {
 @media screen and (max-width: 320px) {
 	.banner {
 		width: 100%;
-		margin: 15px;
+		margin: 15px 0;
 		height: 0;
 		padding-top: 26.37%;
 	}
